<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68AAE4"
    tools:context="com.moxit.Score_keeper.MainActivity">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="426dp"
        android:background="#082D5A"
        android:text="@string/india"
        android:textColor="#E3A436"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="426dp"
        android:background="#082D5A"
        android:text="@string/new_zealand"
        android:textColor="#D5AA26"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="355dp"
        android:text="@string/india_score"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="355dp"
        android:text="@string/nz_score"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="144dp"
        android:text="@string/india_down"
        app:icon="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="8dp"
        android:text="@string/india_up"
        app:icon="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="144dp"
        android:text="@string/nz_down"
        app:icon="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nz_up"
        app:icon="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="610dp"
        android:background="#2196F3"
        android:text="@string/scorecard"
        android:textAlignment="center"
        android:textColor="#FFFDE7"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>